<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NewBook</string>
    <string name="siguiente">Siguiente</string>
    <string name="bienvenidos">Bienvenidos</string>
    <string name="todo">TODO</string>
    <string name="anterior">Anterior</string>
    <string name="registrarse">Registrarse</string>
    <string name="inicio_de_sesion">Inicio de Sesion</string>
    <string name="Todo">TODO</string>
    <string name="Inicio_de_sesion">Inicio de Sesion</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="Inicio">Inicio</string>
    <string name="Anterior">Anterior</string>
    <string name="continuar">Continuar</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="surname">Surname</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="cargo">Cargo</string>
    <string name="docente">Docente</string>
    <string name="iniciar">Iniciar</string>
    <string name="atras">Atras</string>

    <string name="libros">Libros</string>
    <string name="t1">quinta activity</string>
    <string name="quiz">Quiz</string>
    <string name="t2">quiz</string>



</resources>
